vlib/v/parser/tests/unnamed_sum_type_none_err.vv
fn number() int | none {
	return none
}
